<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Cell Shop</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="navigation_main">主页</string>
    <string name="navigation_sell">销售</string>
    <string name="navigation_purchase">进货</string>
    <string name="navigation_deploy">调配</string>
    <string name="navigation_preferential">优惠</string>
    <string name="navigation_staff">员工</string>
    <string name="navigation_branches">店铺</string>
    <string name="navigation_setting" >设置</string>
	<string name="fragment_change_button_text">更换碎片</string>
	<string name="back_button">后退</string>

</resources>